--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -1,10 +1,10 @@
-<h1>Post Archives until {% now "N d, Y" %}</h1>
+<h1>Post Archives for {{ year|date:'Y' }}</h1>
 
 <ul>
     {% for date in date_list %}
         <li style="display: inline">
-            <a href="{% url 'blog:post_year_archive' date|date:'Y' %}">
-                Year {{ date|date:'Y' }}
+            <a href="{% url 'blog:post_month_archive' year|date:'Y' date|date:'m' %}">
+                {{ date|date:'F' }}
             </a>
         </li>
     {% endfor %}
@@ -15,7 +15,7 @@
     <ul>
         {% for post in object_list %}
             <li>
-            {{ post.modify_dt|date:'Y-m-d' }}&nbsp;&nbsp;&nbsp;
+                {{ post.modify_dt|date:'Y-m-d' }}&nbsp;&nbsp;&nbsp;
                 <a href="{{ post.get_absolute_url }}">
                     <strong>{{ post.title }}</strong>
                 </a>
