--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Django Web Programming </title>
+    <title> {% block title %} Django Web Programming  {% endblock title %} </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -51,11 +51,11 @@
 </nav>
 
 <div class="container bg-warning">
-    <h4>This is CONTENT area.</h4>
+    {% block content %} {% endblock content %}
 </div>
 
 <footer class="fixed-bottom bg-info">
-    <h4>THIS is FOOTER area.</h4>
+    {% block footer %} {% endblock footer %}
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -69,5 +69,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+{% block extra-script %}{% endblock %}
+
 </body>
 </html>
