--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,47 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}
     home.html
 {% endblock title %}
 
+{% block extra-style %}
+    <style type="text/css">
+        .home-image {
+            background-image: url("{% static 'img/lion.jpg' %}");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 100%;
+            height: 500px;
+            border-top: 10px solid #ccc;
+            border-bottom: 10px solid #ccc;
+            padding: 20px 0 0 20px;
+        }
+
+        .title {
+            color: #c80;
+            font-weight: bold;
+        }
+
+        .powered {
+            position: relative;
+            top: 77%;
+            color: #cc0;
+            font-style: italic;
+        }
+    </style>
+{% endblock extra-style %}
+
+
 {% block content %}
+{#    <div class="home-image">#}
+{#        <h2 class="title">Django - Python Web Programming</h2>#}
+{#        <h4><i class="fas fa-arrow-circle-right"></i> powered by django and bootstrap </h4>#}
+{#    </div>#}
+{##}
+{#    <hr style="margin: 10px 0;">#}
+
     <div class="container bg-warning">
         <h4>This is CONTENT area.</h4>
     </div>
