--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-{% block extra-script %}{% endblock %}
+{% block extra-script %}{% endblock extra-script %}
 
 </body>
 </html>
