--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     home.html
 {% endblock title %}
 
-{% block extra-style %}
+{% block extra-script %}
     <style type="text/css">
         .home-image {
             background-image: url("{% static 'img/lion.jpg' %}");
@@ -31,25 +31,46 @@
             font-style: italic;
         }
     </style>
-{% endblock extra-style %}
+{% endblock extra-script %}
 
 
 {% block content %}
-{#    <div class="home-image">#}
-{#        <h2 class="title">Django - Python Web Programming</h2>#}
-{#        <h4><i class="fas fa-arrow-circle-right"></i> powered by django and bootstrap </h4>#}
-{#    </div>#}
-{##}
-{#    <hr style="margin: 10px 0;">#}
+    <div class="home-image">
+        <h2 class="title">Django - Python Web Programming</h2>
+        <h4 class="powered">
+            <i class="fas fa-arrow-circle-right"></i> powered by django and bootstrap
+        </h4>
+    </div>
 
-    <div class="container bg-warning">
-        <h4>This is CONTENT area.</h4>
+    <hr style="margin: 10px 0;">
+
+    <div class="row text-center">
+        <div class="col-sm-6">
+            <h3>Bookmark App</h3>
+            <p>
+                Bookmark is a Uniform Resource Identifier (URI)
+                that is stored for later retrieval in any of various storage
+
+                You can store your own bookmarks by bookmark application.
+                It's also possible to update or delete your bookmarks
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <h3>Blog App</h3>
+            <p>
+                This application makes it possible to log daily events or write your own interests
+                such as hobbies, techniques, etc.
+                A typical blog combines text, digital images, and links to other blogs, web pages,
+                and other media related to its topic.
+            </p>
+        </div>
+
     </div>
 {% endblock content %}
 
 {% block footer %}
     <footer class="fixed-bottom bg-info">
-        <h4>THIS is FOOTER area.</h4>
+        <div class="text-white font-italic text-right mr-5">Copyright &copy; 2019 Django by python6th</div>
     </footer>
 {% endblock footer %}
 
