--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -1,13 +1,10 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Django Bookmark List</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}
+    bookmark_list.html
+{% endblock title %}
+
+{% block content %}
     <div id="content">
         <h1>Bookmark List</h1>
         <ul>
@@ -18,5 +15,5 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+{% endblock content %}
+
