--- a/blog/templates/blog/post_all.html
+++ b/blog/templates/blog/post_all.html
@@ -1,3 +1,10 @@
+{% extends 'base.html' %}
+
+{% block title %}
+    post_all.html
+{% endblock title %}
+
+{% block content %}
 <h1>Blog List</h1>
 <br>
 
@@ -22,3 +29,4 @@
         {% endif %}
     </span>
 </div>
+{% endblock content %}
