--- a/blog/templates/blog/post_archive_day.html
+++ b/blog/templates/blog/post_archive_day.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    post_archive_month.html
+    post_archive_day.html
 {% endblock title %}
 
 {% block content %}
-    <h1>Post Archives for {{ month|date:'N, Y' }}</h1>
-
+    <h1>Post Archives for {{ day|date:'N d, Y' }}</h1>
+    <br>
     <div>
         <ul>
             {% for post in object_list %}
-                <li>
+                <li class="h5">
                     {{ post.modify_dt|date:'Y-m-d' }}&nbsp;&nbsp;&nbsp;
                     <a href="{{ post.get_absolute_url }}">
                         <strong>{{ post.title }}</strong>
