--- a/templates/base.html
+++ b/templates/base.html
@@ -27,15 +27,15 @@
 </head>
 <body style="padding-top: 90px">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <a class="navbar-brand" href="#">Django - Python Web Programming</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Django - Python Web Programming</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item mx-1 btn btn-primary active">
-                <a href="#" class="nav-link">
+            <li class="nav-item mx-1 btn btn-primary">
+                <a href="{% url 'home' %}" class="nav-link">
                     Home<span class="sr-only">current</span>
                 </a>
             </li>
@@ -47,10 +47,10 @@
                     Dropdown
                 </a>
                 <div class="dropdown-menu">
-                    <a href="#" class="dropdown-item">Action</a>
-                    <a href="#" class="dropdown-item">Another Action</a>
+                    <a href="{% url 'admin:index' %}" class="dropdown-item" target="_blank">Admin</a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">Something else here</a>
+                    <a href="{% url 'blog:post_archive' %}" class="dropdown-item">Archive</a>
+                    <a href="{% url 'blog:search' %}" class="dropdown-item">Search</a>
                 </div>
             </li>
             <li class="nav-item mx-1 btn btn-primary">
