--- a/blog/templates/blog/post_search.html
+++ b/blog/templates/blog/post_search.html
@@ -1,9 +1,35 @@
+{#{% extends 'base.html' %}#}
+{##}
+{#{% block title %}#}
+{#    post_search.html#}
+{#{% endblock title %}#}
+{##}
+{##}
+{#{% block content %}#}
+{#    <h1>Blog Search</h1>#}
+{##}
+{#    <form action="." method="post">#}
+{#        {% csrf_token %}#}
+{#        {{ form.as_table }}#}
+{#        <input type="submit" value="Submit" class="btn btn-primary btn-sm">#}
+{#    </form>#}
+{#    <br>#}
+{#    {% if obeject_list %}#}
+{#        {% for post in object_list %}#}
+{#            <h2>#}
+{#                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>#}
+{#            </h2>#}
+{#            {{ post.modify_date|date:"N d, Y" }}#}
+{#            <p>{{ post.description }}</p>#}
+{#        {% endfor %}#}
+{#    {% elif search_term %}#}
+{#        <b><i>Search Word{{ search_term }} Not Found !</i></b>#}
+{#    {% endif %}#}
+{#{% endblock content %}#}
+{# ####################################### #}
 {% extends 'base.html' %}
 
-{% block title %}
-    post_search.html
-{% endblock title %}
-
+{% block title %}post_search.html{% endblock title %}
 
 {% block content %}
     <h1>Blog Search</h1>
@@ -13,16 +39,17 @@
         {{ form.as_table }}
         <input type="submit" value="Submit" class="btn btn-primary btn-sm">
     </form>
-    <br>
-    {% if obeject_list %}
+
+    <br><br>
+    {% if object_list %}
         {% for post in object_list %}
             <h2>
                 <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
             </h2>
-            {{ post.modify_date|date:"N d, Y" }}
             <p>{{ post.description }}</p>
         {% endfor %}
+
     {% elif search_term %}
-        <b><i>Search Word{{ search_term }} Not Found !</i></b>
+        <b><i>Search Word({{ search_term }}) Not Found</i></b>
     {% endif %}
 {% endblock content %}
