로그인 기능 시작

--- a/photo/templates/photo/album_detail.html
+++ b/photo/templates/photo/album_detail.html
@@ -6,8 +6,12 @@
 
 {% block extra-style %}
     <style>
-        thumbnail {
+        .thumbnail {
             border: 5px solid #ccc;
+        }
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
         }
     </style>
 {% endblock extra-style %}
@@ -25,7 +29,7 @@
             <div class="col-md-3 mb-5">
                 <div class="thumbnail">
                     <a href="{{ photo.get_absolute_url }}">
-                        <img src="{{ photo.image.thumb_url }}" style="width: 100%;">
+                        <img src="{{ photo.image.thumb_url }}">
                     </a>
                 </div>
                 <ul>
