--- a/photo/templates/photo/photo_detail.html
+++ b/photo/templates/photo/photo_detail.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-9">
             <a href="{{ object.image.url }}">
-                <img src="{{ object.imag.url }}" style="width: 100%;">
+                <img src="{{ object.image.url }}" style="width: 100%;">
             </a>
         </div>
 
@@ -20,7 +20,7 @@
             <li class="h5">
                 Photo Description
             </li>
-            {% if object.desciption %}
+            {% if object.description %}
                 <p>{{ object.description|linebreaks }}</p>
             {% else %}
                 <p>(blank)</p>
