--- a/templates/base.html
+++ b/templates/base.html
@@ -77,8 +77,13 @@
             {#            <li class="nav-item mx-1 btn btn-primary">#}
             {#                <a href="{% url 'blog:index' %}" class="nav-link text-white">Blog</a>#}
             {#            </li>#}
-            <li class="nav-item mx-1 btn btn-primary">
-                <a href="{% url 'photo:index' %}" class="nav-link text-white">Photo</a>
+            <li class="nav-item dropdown mx-1 btn btn-primary dropdown">
+                <a href="#" class="nav-link dropdown-toggle text-white" data-toggle="dropdown">Photo</a>
+                <div class="dropdown-menu">
+                    <a href="{% url 'photo:index' %}" class="dropdown-item">List</a>
+                    <a href="{% url 'photo:album_add' %}" class="dropdown-item">Add</a>
+                    <a href="{% url 'photo:album_change' %}" class="dropdown-item">Change</a>
+                </div>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" method="post" action="{% url 'blog:search' %}">
